--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -8,7 +8,7 @@ tests_config:
     - test_sms_icon
     - test_sorting_columns
     - test_searching_by_columns
-#
+
 - module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Check_Modules
   class: CheckModules
   tests:
@@ -30,7 +30,7 @@ tests_config:
     - test_create_filter_leads_module
     - test_create_filter_help_desk
     - test_create_filter_trading_account_module
-  Leads
+
 - module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Tab_Leads_Module
   class: TabLeadsModuleCRM
   tests:
@@ -109,10 +109,10 @@ tests_config:
   tests:
     - test_make_credit_out_crm # preconditions: convert lead, make credit in
 
-#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Transfer_Between_Ta
-#  class: TransferBetweenTa
-#  tests:
-#    - test_transfer_between_ta  # preconditions: convert lead, deposit crm
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Transfer_Between_Ta
+  class: TransferBetweenTa
+  tests:
+    - test_transfer_between_ta  # preconditions: convert lead, deposit crm
 
 - module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Trading_Account
   class: TradingAccountCrmTest
