--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -1,5 +1,6 @@
 tests_config:
-########################################MY DASHBOARD TESTS########################################
+
+#######################################MY DASHBOARD TESTS########################################
 - module: src.test.python.ui.automation.implementation.crm.tests_my_dashboard_module.Test_My_Dashboard_Actions
   class: MyDashboardActionsTest
   tests:
@@ -8,7 +9,8 @@ tests_config:
     - test_sms_icon
     - test_sorting_columns
     - test_searching_by_columns
-#########################################FILTERS TESTS###############################################
+
+########################################FILTERS TESTS###############################################
 - module: src.test.python.ui.automation.implementation.crm.tests_create_filters.Test_Create_Filter
   class: FilterModulesTest
   tests:
@@ -17,7 +19,8 @@ tests_config:
     - test_create_filter_leads_module
     - test_create_filter_help_desk
     - test_create_filter_trading_account_module
-#############################################LEADS###################################################
+
+############################################LEADS###################################################
 - module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Tab_Leads_Module
   class: TabLeadsModuleCRM
   tests:
@@ -40,21 +43,21 @@ tests_config:
     - test_edit_lead_pencil_icon
     - test_check_email_popup
 
-###################################CONVERT LEAD##########################################
+##################################CONVERT LEAD##########################################
 - module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
   directive: reload_configuration
   class: LeadModuleTest
   tests:
     - test_perform_convert_lead   # Creates a lead and converts it to a client
 
-####################################CLIENTS###############################################
+###################################CLIENTS###############################################
 
 - module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Searching_Clients
   class: SearchingClientsTestCRM
   tests:
-    - test_make_searching_client_module   # Searches for a client.
+    - test_make_searching_client_module   # Searches for a client
 
-#####################################TASKS##################################################
+####################################TASKS##################################################
 - module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Event
   class: AddEventTaskModule
   tests:
@@ -62,40 +65,48 @@ tests_config:
     - test_sms_icon
     - test_mass_edit_tasks
     - test_searching_by_columns
+
 - module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Trading_Account
   class: TradingAccountCrmTest
   tests:
     - test_crm_open_trading_account  # open a new trading account
     - test_crm_open_live_mt5
     - test_crm_open_demo_mt5
+
 - module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Check_Password
   class: CheckPasswordTestCRM
   tests:
     - test_check_client_password_crm  # check the client account password
     - test_check_mt4_password_crm   # check the MT4 account password
+
 - module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Change_Password
   class: ChangePasswordTestCRM
   tests:
     - test_change_client_password_from_crm  # change a client account password from the crm
     - test_change_mt4_password_from_crm  # change an MT4 account password from the crm
+
 - module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Make_Deposit
   class: DepositTestCRM
   tests:
     - test_make_deposit_crm  # make a deposit into a trading account from the crm
     - test_make_deposit_for_client_crm
+
 - module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Withdraw_CRM
   class: WithdrawTest
   tests:
     - test_withdraw_crm   #preconditions: convert lead, make deposit
+
 - module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Make_Credit_In
   class: CreditInTestCRM
   tests:
     - test_make_credit_in_from_crm
+
 - module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Make_Credit_Out
   class: CreditOutTestCRM
   tests:
     - test_make_credit_out_crm # preconditions: convert lead, make credit in
 
+####################################SEND MAIL FROM CLIENT'S DETAILS##########################
 - module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Send_Email
   class: SendEmailTestCRM
   tests:
@@ -110,22 +121,29 @@ tests_config:
   class: TradingAccountCrmTest
   tests:
     - test_crm_edit_trading_account  # edit trading account
+
+######################################AFFILIATES MODULE##########################################
 - module: src.test.python.ui.automation.implementation.crm.tests_affiliates_module.Test_Affiliates_Module
   class: AffiliateModule
   tests:
      - test_create_affiliate
+
+######################################TASKS CALENDAR VIEW########################################
 - module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Calendar_View
   class: CalendarView
   tests:
      - test_check_day_tab
      - test_check_month_tab
      - test_check_week_tab
+
+######################################FINANCIAL TRANSACTIONS######################################
 - module: src.test.python.ui.automation.implementation.crm.tests_financial_transactions.Test_Tab_Financial_Transaction_Module
   class: TabFinancialTransaction
   tests:
     - test_check_all_tab_from_financial_transactions
     - test_check_searching_by_column # Check filters in columns -  all required columns (customer name, date, transaction type, trading account number, transaction number)
     - test_check_search_via_button # Check search using search button
+
 #########################################CAMPAIGN MODULE###############################################
 - module: src.test.python.ui.automation.implementation.crm.tests_compaigns_module.Test_Campaigns_Module
   class: CampaignsModuleTest
@@ -133,12 +151,15 @@ tests_config:
     - test_create_campaign
     - test_edit_campaign
     - test_delete_campaign
+
+#########################################AUTOASSIGN MODULE#############################################
 - module: src.test.python.ui.automation.implementation.crm.tests_auto_assign_module.Test_Auto_Assign
   class: AutoAssignModuleTest
   tests:
     - test_add_auto_assign_rule_lead
     - test_add_auto_assign_rule_client
     - test_perform_delete_rule
+
 - module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Check_Modules
   class: CheckModulesTest
   tests:
@@ -147,10 +168,12 @@ tests_config:
     - test_check_dashboard
     - test_check_leaderboard
     - test_check_user_management
+
 - module: src.test.python.ui.automation.implementation.crm.tests_crm_configuration.Test_CRM_Configurations
   class: CRMConfigurationsTest
   tests:
     - test_crm_configurations_pages_loading
+
 - module: src.test.python.ui.automation.implementation.crm.tests_workflows.Test_Workflows_Modules
   class: WorkflowsModulesTest
   tests:
@@ -159,7 +182,7 @@ tests_config:
     - test_check_workflow_by_country
     - test_delete_workflow
 
-#################################User_Management#########################################
+##########################################USER_MANAGEMENT#########################################
 - module: src.test.python.ui.automation.implementation.crm.user_management.Test_User_Management
   class: UserManagementTest
   tests:
