--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -22,6 +22,7 @@ tests_config:
     - test_open_order_buy_sell
     - test_open_order_stop_loss_take_profit
     - test_edit_order_stop_loss_take_profit
+    - test_close_order
 
 
 #- module: src.test.python.ui.automation.implementation.ca.Test_Personal_Details_Update
