--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -72,6 +72,19 @@ tests_config:
 #  tests:
 #    - test_make_searching_client_module   # Searches for a client.
 
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Mass_Edit
+  class: MassEditTestCRM
+  tests:
+    - test_make_mass_edit
+
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Mass_Assign
+  class: MassAssignTestCRM
+  tests:
+    - test_mass_assign
+
+
+
+
 ####################################################TASKS##################################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Event
 #  class: AddEventTaskModule
@@ -183,7 +196,7 @@ tests_config:
 #    - test_create_user
 
 ##########################################DOCUMENTS MODULE###############################################
-- module: src.test.python.ui.automation.implementation.crm.tests_document_module.Test_Document_Module
-  class: DocumentModuleTest
-  tests:
-    - test_searching_by_columns
+#- module: src.test.python.ui.automation.implementation.crm.tests_document_module.Test_Document_Module
+#  class: DocumentModuleTest
+#  tests:
+#    - test_searching_by_columns
