--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -25,16 +25,16 @@ brands:
 #  config_file: optionstars.yml
 #- name: uft
 #  config_file: uft.yml
-- name: brokerz
-  config_file: brokerz.yml
-- name: 4xfx
-  config_file: 4xfx.yml
+#- name: brokerz
+#  config_file: brokerz.yml
+#- name: 4xfx
+#  config_file: 4xfx.yml
 #- name: herdos
 #  config_file: herdos.yml
-- name: ptbanc
-  config_file: ptbanc.yml
-- name: q8
-  config_file: q8.yml
+#- name: ptbanc
+#  config_file: ptbanc.yml
+#- name: q8
+#  config_file: q8.yml
 #- name: 2mercados
 #  config_file: 2mercados.yml
 #- name: axa_markets
