--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -1,14 +1,14 @@
 tests_config:
 
 #######################################MY DASHBOARD TESTS########################################
-- module: src.test.python.ui.automation.implementation.crm.tests_my_dashboard_module.Test_My_Dashboard_Actions
-  class: MyDashboardActionsTest
-  tests:
+#- module: src.test.python.ui.automation.implementation.crm.tests_my_dashboard_module.Test_My_Dashboard_Actions
+#  class: MyDashboardActionsTest
+#  tests:
 #    - test_edit_event_my_dashboard
 #    - test_email_icon
 #    - test_sms_icon
 #    - test_sorting_columns
-    - test_searching_by_columns
+#    - test_searching_by_columns
 
 ########################################FILTERS TESTS###############################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_create_filters.Test_Create_Filter
@@ -60,20 +60,20 @@ tests_config:
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Mass_Edit
 #  class: MassEditTestCRM
 #  tests:
-#    - test_make_mass_edit
+#    - test_clients_mass_edit
 #
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Mass_Assign
 #  class: MassAssignTestCRM
 #  tests:
-#    - test_mass_assign
+#    - test_clients_mass_assign
 #
 ######################################TASKS##################################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Event
-#  class: AddEventTaskModule
-#  tests:
+- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Event
+  class: AddEventTaskModule
+  tests:
 #    - test_email_icon
 #    - test_sms_icon
-#    - test_mass_edit_tasks
+    - test_mass_edit_tasks
 #    - test_searching_by_columns
 #
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Trading_Account
