--- a/src/test/python/resources/config/brands5.yml
+++ b/src/test/python/resources/config/brands5.yml
@@ -1,9 +1,4 @@
 brands:
-- name: brokerxp
-  config_file: brokerxp.yml
-#- name: fxpmarkets
-#  config_file: fxpmarkets.yml
-#- name: fm-fx
-#  config_file: fm-fx.yml
-#- name: mlnfx
-#  config_file: mlnfx.yml
+
+- name: itrader
+  config_file: itrader.yml
