--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -1,6 +1,6 @@
 tests_config:
 
-#######################################MY DASHBOARD TESTS########################################
+######################################MY DASHBOARD TESTS########################################
 - module: src.test.python.ui.automation.implementation.crm.tests_my_dashboard_module.Test_My_Dashboard_Actions
   class: MyDashboardActionsTest
   tests:
@@ -75,12 +75,12 @@ tests_config:
 - module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Mass_Edit
   class: MassEditTestCRM
   tests:
-    - test_make_mass_edit
+    - test_clients_mass_edit
 
 - module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Mass_Assign
   class: MassAssignTestCRM
   tests:
-    - test_mass_assign
+    - test_clients_mass_assign
 
 
 ####################################################TASKS##################################################
