--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -1,43 +1,37 @@
 brands:
-
-- name: triomarkets
-  config_file: triomarkets.yml
 - name: ogtrade
   config_file: ogtrade.yml
-- name: fm-fx
-  config_file: fm-fx.yml
+- name: kayafx
+  config_file: kaya_fx.yml
+- name: itrader
+  config_file: itrader.yml
+- name: stoxmarket
+  config_file: stoxmarket.yml
+- name: otcapital
+  config_file: otcapital.yml
+- name: gmo
+  config_file: gmo.yml
+- name: triomarkets
+  config_file: triomarkets.yml
+- name: rimarkets
+  config_file: rimarkets.yml
+- name: itrader_global
+  config_file: itrader_global.yml
+- name: finmarket
+  config_file: finmarket.yml
 - name: mlnfx
   config_file: mlnfx.yml
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+- name: fxpmarkets
+  config_file: fxpmarkets.yml
+- name: soarfx
+  config_file: soarfx.yml
+- name: kbcapitals
+  config_file: kbcapitals.yml
+- name: oinvestsa
+  config_file: oinvestsa.yml
+- name: brokerxp
+  config_file: brokerxp.yml
+- name: fm-fx
+  config_file: fm-fx.yml
+- name: capitalmarketsbanc
+  config_file: capitalmarketsbanc.yml
