--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -1,11 +1,5 @@
 brands:
 
-##CA
-#- name: royal_cfds_ca
-#  config_file: royal_cfd_ca.yml
-
-
-
 #- name: royal_cfds
 #  config_file: royal_cfds.yml
 #- name: jonesmutual
@@ -79,6 +73,8 @@ brands:
 #  config_file: tfxgo.yml
 #- name: uprofx
 #  config_file: uprofx.yml
+#- name: mpcrypto
+#  config_file: mpcrypto.yml
 
 
 
