--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -3,8 +3,8 @@ brands:
 #- name: ptbanc
 #  config_file: ptbanc.yml
 #
-#- name: q8
-#  config_file: q8.yml
+- name: q8
+  config_file: q8.yml
 #
 #- name: kontofx
 #  config_file: kontofx.yml
@@ -14,13 +14,7 @@ brands:
 #
 #- name: 4xfx
 #  config_file: 4xfx.yml
-
-- name: tradospot
-  config_file: tradospot.yml
-
-
-
-
-
-
+#
+#- name: tradospot
+#  config_file: tradospot.yml
 
