--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -5,12 +5,12 @@ brands:
 
 #- name: itrader
 #  config_file: itrader.yml
-
-- name: gmo
-  config_file: gmo.yml
+#
+#- name: gmo
+#  config_file: gmo.yml
 
 #- name: capitalmarketsbanc
 #  config_file: capitalmarketsbanc.yml
 
-#- name: brokerxp
-#  config_file: brokerxp.yml
+- name: brokerxp
+  config_file: brokerxp.yml
