--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -1,14 +1,14 @@
 tests_config:
 
 ######################################MY DASHBOARD TESTS########################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_my_dashboard_module.Test_My_Dashboard_Actions
-#  class: MyDashboardActionsTest
-#  tests:
+- module: src.test.python.ui.automation.implementation.crm.tests_my_dashboard_module.Test_My_Dashboard_Actions
+  class: MyDashboardActionsTest
+  tests:
 #    - test_edit_event_my_dashboard
-#    - test_email_icon
-#    - test_sms_icon
-#    - test_sorting_columns
-#    - test_searching_by_columns
+    - test_email_icon
+    - test_sms_icon
+    - test_sorting_columns
+    - test_searching_by_columns
 #
 #######################################MODULES ARE OPENS#########################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Check_Modules
@@ -178,10 +178,10 @@ tests_config:
 #    - test_perform_delete_rule
 #
 ###########################################WORKFLOWS MODULE##############################################
-- module: src.test.python.ui.automation.implementation.crm.tests_workflows.Test_Workflows_Modules
-  class: WorkflowsModulesTest
-  tests:
-    - test_create_workflows
+#- module: src.test.python.ui.automation.implementation.crm.tests_workflows.Test_Workflows_Modules
+#  class: WorkflowsModulesTest
+#  tests:
+#    - test_create_workflows
 #    - test_check_workflow_by_status
 #    - test_check_workflow_by_country
 #    - test_delete_workflow
