--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -56,12 +56,12 @@ tests_config:
 #  class: SearchingClientsTestCRM
 #  tests:
 #    - test_make_searching_client_module   # Searches for a client
-
-- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Mass_Edit
-  class: MassEditTestCRM
-  tests:
-    - test_clients_mass_edit
-
+#
+#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Mass_Edit
+#  class: MassEditTestCRM
+#  tests:
+#    - test_clients_mass_edit
+#
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Mass_Assign
 #  class: MassAssignTestCRM
 #  tests:
@@ -201,7 +201,8 @@ tests_config:
 #    - test_delete_user
 #
 ##########################################DOCUMENTS MODULE###############################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_document_module.Test_Document_Module
-#  class: DocumentModuleTest
-#  tests:
+- module: src.test.python.ui.automation.implementation.crm.tests_document_module.Test_Document_Module
+  class: DocumentModuleTest
+  tests:
 #    - test_searching_by_columns
+    - test_open_tabs
